[package]
name = "harfbuzz_rust"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
skrifa = { version = "0.*", optional = true }
harfrust = { git = "https://github.com/harfbuzz/harfrust", optional = true }

[lib]
name = "harfbuzz_rust"
path = "lib.rs"
crate-type = ["staticlib"]

[features]
font = ["dep:skrifa"]
shape = ["dep:harfrust"]

[profile.release]
strip = true
lto = "fat"
panic = "abort"
overflow-checks = false
codegen-units = 1

[profile.debugoptimized]
inherits = "release"
debug = true
codegen-units = 16
strip = false

[profile.dev]
lto = "fat"
