[package]
name = "harfbuzz_rust"
edition = "2021"
rust-version = "1.87.0"

[dependencies]
skrifa = { version = "0.*", optional = true }
harfrust = { version = "0.6.*", optional = true }
# harfrust = { git = "https://github.com/harfbuzz/harfrust", optional = true }

[lib]
name = "harfbuzz_rust"
path = "lib.rs"
crate-type = ["staticlib"]

[features]
default = ["paint", "draw"]
font = ["dep:skrifa"]
shape = ["dep:harfrust"]
paint = []
draw = []

[profile.release]
strip = true
panic = "abort"
overflow-checks = false
lto = "fat"
codegen-units = 1

[profile.debugoptimized]
inherits = "dev"
panic = "abort"
overflow-checks = false
lto = "fat"
codegen-units = 1
